--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,14 @@ on:
     branches: ['**']
 
 jobs:
-  # Build stage: prepare Python and install dependencies
   build:
     runs-on: ubuntu-latest
-    outputs:
-      python-version: "3.13"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        id: set-python
         with:
           python-version: "3.13"
 
@@ -35,7 +31,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-  # Test stage: run unit/integration tests
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -53,10 +48,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests (verbose)
+      - name: Run tests
         run: pytest tests/ -v
 
-  # Coverage stage: run coverage and upload HTML report
   coverage:
     runs-on: ubuntu-latest
     needs: test
@@ -74,7 +68,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests with coverage and generate HTML report
+      - name: Run coverage tests
         run: pytest tests/ --cov=src --cov-report=html
 
       - name: Upload coverage HTML
@@ -83,7 +77,6 @@ jobs:
           name: coverage-html
           path: htmlcov
 
-  # Code quality (lint) stage
   lint:
     runs-on: ubuntu-latest
     needs: coverage
@@ -91,17 +84,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
-
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
           pip install pylint
 
-      - name: Run pylint and save report
+      - name: Run pylint
         run: pylint src/ --output-format=text > lint_report.txt || true
 
       - name: Upload lint report
@@ -110,7 +98,6 @@ jobs:
           name: lint-report
           path: lint_report.txt
 
-  # Formatting stage
   format:
     runs-on: ubuntu-latest
     needs: lint
@@ -118,34 +105,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
-
       - name: Install black
         run: |
           python -m pip install --upgrade pip
           pip install black
 
-      - name: Check formatting with black (warn only)
+      - name: Check formatting
         run: black src/ tests/ --check || true
 
       - name: Show black diff
         run: black src/ tests/ --diff || true
 
-  # Security stage: run bandit and upload JSON report
   security:
     runs-on: ubuntu-latest
     needs: format
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
 
       - name: Install bandit
         run: |
@@ -155,7 +131,7 @@ jobs:
       - name: Run bandit (console)
         run: bandit -r src/ -v || true
 
-      - name: Run bandit (json output)
+      - name: Run bandit (json)
         run: bandit -r src/ -f json -o security_report.json || true
 
       - name: Upload security report
@@ -164,7 +140,6 @@ jobs:
           name: security-report
           path: security_report.json
 
-  # Deploy stage: compile, package, and upload artifacts
   deploy:
     runs-on: ubuntu-latest
     needs: security
@@ -172,36 +147,36 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download coverage artifact (if present)
+      - name: Download coverage artifact
         uses: actions/download-artifact@v4
         with:
           name: coverage-html
           path: artifacts/coverage-html
         continue-on-error: true
 
-      - name: Download lint report (if present)
+      - name: Download lint report
         uses: actions/download-artifact@v4
         with:
           name: lint-report
           path: artifacts/lint
         continue-on-error: true
 
-      - name: Download security report (if present)
+      - name: Download security report
         uses: actions/download-artifact@v4
         with:
           name: security-report
           path: artifacts/security
         continue-on-error: true
 
-      - name: Simple package: compile, zip and upload
+      - name: Compile, zip, and upload
         run: |
-          echo "Creating simple deployment package..."
+          echo "Creating deployment package..."
           rm -f deployment-package.zip || true
           python -m compileall -b -f src || true
           zip -r deployment-package.zip src artifacts README.md requirements.txt || true
           echo "Created deployment-package.zip"
-          ls -lh deployment-package.zip || true
-          unzip -l deployment-package.zip || true
+          ls -lh deployment-package.zip
+          unzip -l deployment-package.zip
 
       - name: Upload deployment package
         uses: actions/upload-artifact@v4
